subir fotos a la BD mod2

--- a/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -10,151 +10,155 @@
     android:background="@drawable/header">
 
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="25dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="REGISTRO DE PASAJERO"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#000000"
+                />
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/ibPerfil"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/boton_redondo"
+                android:src="@drawable/student"
+                android:onClick="preview"
+                />
+
+        </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-
+            android:background="@drawable/bordes_redondeados"
             >
-            <LinearLayout
-                android:layout_width="match_parent"
+
+
+            <TableLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="25dp">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="REGISTRO DE PASAJERO"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#000000"
-                    />
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/ibPerfil"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/boton_redondo"
-                    android:src="@drawable/student"
-                    android:onClick="preview"
-                    />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/bordes_redondeados"
+                android:id="@+id/formRegistroConductor"
+                android:shrinkColumns="@android:string/selectAll"
+                android:stretchColumns="@android:string/selectAll"
+                android:layout_gravity="center_horizontal"
                 >
-
-
-                <TableLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/formRegistroConductor"
-                    android:shrinkColumns="@android:string/selectAll"
-                    android:stretchColumns="@android:string/selectAll"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="-14dp"
-                    >
-                    <TableRow>
-                        <com.google.android.material.textfield.TextInputLayout>
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:hint="@string/ingrese_nombre"
-                                android:layout_width="300dp"
-                                android:layout_height="40dp"
-                                android:layout_gravity="center"
-                                android:id="@+id/etNombresConductor"
-                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-                                />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                    </TableRow>
-
-                    <TableRow>
-                        <com.google.android.material.textfield.TextInputLayout>
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:hint="@string/ingrese_apellido"
-                                android:id="@+id/etApellidosConductor"
-                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-                                />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                    </TableRow>
-                    <TableRow>
-                        <com.google.android.material.textfield.TextInputLayout>
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/ingrese_correo"
-                                android:id="@+id/etCorreoConductor"
-                                android:theme="@style/Widget.AppCompat.EditText"
-                                android:inputType="textEmailAddress" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                    </TableRow>
-                    <TableRow>
-                        <com.google.android.material.textfield.TextInputLayout>
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/ingese_contra"
-                                android:id="@+id/etpasswordConductor"
-                                android:theme="@style/Widget.AppCompat.EditText"
-                                android:inputType="textPassword" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-
-                    </TableRow>
-                    <TableRow>
-                        <com.google.android.material.textfield.TextInputLayout>
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/repita_contra"
-                                android:id="@+id/etpassword2Conductor"
-
-                                android:inputType="textPassword" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-
-                    </TableRow>
-
-                    <TableRow>
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:layout_width="60dp"
-                            android:layout_height="30dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="15dp"
-                            android:text="REGISTRARME"
-                            android:background="@color/naranja"
-                            android:textColor="@color/colorWhite"
-                            android:shadowColor="@color/gris"
-                            android:outlineAmbientShadowColor="@color/gris"
-
-                            android:foreground="?attr/selectableItemBackgroundBorderless"
-                            android:onClick="registrarPasajero"
+                <TableRow>
+                    <com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:hint="@string/ingrese_nombre"
+                            android:layout_width="300dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="center"
+                            android:id="@+id/etNombresConductor"
+                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                             />
-                    </TableRow>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </TableRow>
+
+                <TableRow>
+                    <com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="300dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:hint="@string/ingrese_apellido"
+                            android:id="@+id/etApellidosConductor"
+                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </TableRow>
+                <TableRow>
+                    <com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="300dp"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/ingrese_correo"
+                            android:id="@+id/etCorreoConductor"
+                            android:theme="@style/Widget.AppCompat.EditText"
+                            android:inputType="textEmailAddress" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </TableRow>
+                <TableRow>
+                    <com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="300dp"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/ingese_contra"
+                            android:id="@+id/etpasswordConductor"
+                            android:theme="@style/Widget.AppCompat.EditText"
+                            android:inputType="textPassword" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
-                </TableLayout>
+                </TableRow>
+                <TableRow>
+                    <com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="300dp"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/repita_contra"
+                            android:id="@+id/etpassword2Conductor"
+
+                            android:inputType="textPassword" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
-            </LinearLayout>
+                </TableRow>
+
+                <TableRow>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="60dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="15dp"
+                        android:text="REGISTRARME"
+                        android:background="@color/naranja"
+                        android:textColor="@color/colorWhite"
+                        android:shadowColor="@color/gris"
+                        android:outlineAmbientShadowColor="@color/gris"
+
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
+                        android:onClick="registrarPasajero"
+                        />
+                </TableRow>
+
+
+            </TableLayout>
 
 
         </LinearLayout>
+
+
+    </LinearLayout>
+
+</ScrollView>
+
 
 
 
