--- a/app/src/main/res/layout/activity_opciones_fotografia_propietario.xml
+++ b/app/src/main/res/layout/activity_opciones_fotografia_propietario.xml
@@ -17,7 +17,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:id="@+id/opcTomarFoto"
-            android:onClick="tomarfotodecamarapasajero"
+            android:onClick="tomarfotodecamarapropietario"
             android:clickable="true">
             <ImageView
                 android:layout_width="64dp"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:id="@+id/opcGaleria"
-            android:onClick="tomarfotodegaleriapasajero"
+            android:onClick="tomarfotodegaleriapropietario"
             android:clickable="true">
             <ImageView
                 android:layout_width="64dp"
@@ -77,7 +77,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:id="@+id/opcEliminar"
-            android:onClick="eliminarfotopasajero"
+            android:onClick="eliminarfotopropietario"
             android:clickable="true">
             <ImageView
                 android:layout_width="64dp"
