--- a/app/src/main/res/layout/activity_registro_conductor.xml
+++ b/app/src/main/res/layout/activity_registro_conductor.xml
@@ -77,7 +77,7 @@
                                 android:layout_height="40dp"
                                 android:layout_gravity="center"
                                 android:id="@+id/etNombresConductor"
-                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+                                android:theme="@style/Widget.AppCompat.EditText"
                                 />
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,7 +92,7 @@
                                 android:layout_gravity="center"
                                 android:hint="@string/ingrese_apellido"
                                 android:id="@+id/etApellidosConductor"
-                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+                                android:theme="@style/Widget.AppCompat.EditText"
                                 />
                         </com.google.android.material.textfield.TextInputLayout>
 
