--- a/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".RegistroPasajero"
     android:padding="20dp"
-    android:background="@drawable/header">
+    android:background="@color/colorWhite">
 
 
 
@@ -19,107 +19,119 @@
             android:orientation="vertical"
 
             >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingBottom="25dp">
-
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="REGISTRO DE PASAJERO"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="#000000"
-                    />
+                    android:text="REGISTRO DE PASAJERO"
+                    android:textColor="#000000" />
+
+
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:layout_width="wrap_content"
+                    android:layout_width="141dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:background="@drawable/boton_redondo"
                     android:src="@drawable/man2"
-                    />
+                    android:onClick="buscarFotoRegistroPasajero"/>
+
+
 
             </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_height="349dp"
                 android:background="@drawable/bordes_redondeados"
-                >
+                android:orientation="vertical">
 
 
                 <TableLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/formRegistroConductor"
-                    android:shrinkColumns="@android:string/selectAll"
-                    android:stretchColumns="@android:string/selectAll"
+                    android:layout_width="305dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="-14dp"
-                    >
+                    android:shrinkColumns="@android:string/selectAll"
+                    android:stretchColumns="@android:string/selectAll">
+
                     <TableRow>
+
                         <com.google.android.material.textfield.TextInputLayout>
+
                             <com.google.android.material.textfield.TextInputEditText
-                                android:hint="@string/ingrese_nombre"
+                                android:id="@+id/etNombresConductor"
                                 android:layout_width="300dp"
                                 android:layout_height="40dp"
                                 android:layout_gravity="center"
-                                android:id="@+id/etNombresConductor"
-                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-                                />
+                                android:hint="@string/ingrese_nombre"
+                                android:theme="@style/Widget.AppCompat.EditText" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                     </TableRow>
 
                     <TableRow>
+
                         <com.google.android.material.textfield.TextInputLayout>
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etApellidosConductor"
                                 android:layout_width="300dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:hint="@string/ingrese_apellido"
-                                android:id="@+id/etApellidosConductor"
-                                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-                                />
+                                android:theme="@style/Widget.AppCompat.EditText" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                     </TableRow>
+
                     <TableRow>
+
                         <com.google.android.material.textfield.TextInputLayout>
+
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etCorreoConductor"
                                 android:layout_width="300dp"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/ingrese_correo"
-                                android:id="@+id/etCorreoConductor"
-                                android:theme="@style/Widget.AppCompat.EditText"
-                                android:inputType="textEmailAddress" />
+                                android:inputType="textEmailAddress"
+                                android:theme="@style/Widget.AppCompat.EditText" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                     </TableRow>
+
                     <TableRow>
+
                         <com.google.android.material.textfield.TextInputLayout>
+
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etpasswordConductor"
                                 android:layout_width="300dp"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/ingese_contra"
-                                android:id="@+id/etpasswordConductor"
-                                android:theme="@style/Widget.AppCompat.EditText"
-                                android:inputType="textPassword" />
+                                android:inputType="textPassword"
+                                android:theme="@style/Widget.AppCompat.EditText" />
                         </com.google.android.material.textfield.TextInputLayout>
 
 
                     </TableRow>
+
                     <TableRow>
+
                         <com.google.android.material.textfield.TextInputLayout>
+
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etpassword2Conductor"
                                 android:layout_width="300dp"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/repita_contra"
-                                android:id="@+id/etpassword2Conductor"
 
                                 android:inputType="textPassword" />
                         </com.google.android.material.textfield.TextInputLayout>
@@ -128,19 +140,19 @@
                     </TableRow>
 
                     <TableRow>
+
                         <androidx.appcompat.widget.AppCompatButton
                             android:layout_width="60dp"
                             android:layout_height="30dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="15dp"
-                            android:text="REGISTRARME"
-                            android:background="@color/naranja"
-                            android:textColor="@color/colorWhite"
-                            android:shadowColor="@color/gris"
-                            android:outlineAmbientShadowColor="@color/gris"
-
+                            android:background="@color/colorRed"
                             android:foreground="?attr/selectableItemBackgroundBorderless"
-                            />
+                            android:outlineAmbientShadowColor="@color/gris"
+                            android:shadowColor="@color/gris"
+                            android:text="REGISTRARME"
+
+                            android:textColor="@color/colorWhite" />
                     </TableRow>
 
 
