falta darle funcionalidad a los botones de agregar foto y aqui va el nuevo splash

--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -86,12 +86,14 @@
             </LinearLayout>
 
             <Button
-
+                android:textColor="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Aceptar"
+                android:background="@color/colorRed"
+                android:onClick="aceptar"
                 android:paddingBottom="25dp"
-                android:onClick="aceptar"/>
+                android:text="Aceptar"
+                 />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
