--- a/app/src/main/res/layout/activity_opciones_fotografia_pasajero.xml
+++ b/app/src/main/res/layout/activity_opciones_fotografia_pasajero.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="20dp"
+    tools:context=".OpcionesFotografiaPasajero"
     android:gravity="">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
             android:onClick="tomarfotodecamarapasajero"
             android:clickable="true">
             <ImageView
+
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:background="@drawable/circlebackgroundred"
