--- a/app/src/main/res/layout/activity_perfil_pasajero.xml
+++ b/app/src/main/res/layout/activity_perfil_pasajero.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="sv.edu.itca.proyecto.avisa.PerfilPasajero"
+    tools:context=".PerfilPasajero"
     android:orientation="vertical"
     android:background="@color/colorWhite">
 
