todos los usuarios pueden registrarse.
LA foto a subir no debe ocupar mucho espacio o dara error.

--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -90,7 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorRed"
-                android:onClick="aceptar"
+                android:onClick="Logeo"
                 android:paddingBottom="25dp"
                 android:text="Aceptar"
                  />
