--- a/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -38,7 +38,7 @@
                     android:background="@drawable/boton_redondo"
                     android:src="@drawable/man2"
                     android:id="@+id/picRegistroPasajero"
-                    android:onClick="buscarFotoRegistroPasajero"/>
+                    android:onClick="preview"/>
 
 
 
