--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -14,19 +14,19 @@
         android:orientation="vertical"
         android:background="@drawable/flogin">
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
             android:layout_marginTop="-10dp"
-            android:src="@drawable/logoavisa"/>
+            android:src="@drawable/avisalogin"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:gravity="center"
      android:text="Bienvenid@"
      android:textStyle="bold"
-     android:textSize="45dp"
-     android:layout_marginTop="-60dp"
+     android:textSize="40dp"
+     android:layout_marginTop="-43dp"
      android:fontFamily="cursive"
      android:textColor="#000000"/>
 
@@ -93,6 +93,7 @@
                 android:onClick="Logeo"
                 android:paddingBottom="25dp"
                 android:text="Aceptar"
+                android:textStyle="bold"
                  />
             <LinearLayout
                 android:layout_width="wrap_content"
