Registro y loggeo funciona bien, hagan pruebas v2

--- a/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -150,6 +150,7 @@
                             android:outlineAmbientShadowColor="@color/gris"
                             android:shadowColor="@color/gris"
                             android:text="REGISTRARME"
+                            android:onClick="preview"
 
                             android:textColor="@color/colorWhite" />
                     </TableRow>
