--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -13,6 +13,12 @@
         android:id="@+id/header"
         android:orientation="vertical"
         android:background="@drawable/flogin">
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/avisalogin"
+            android:layout_marginTop="-14dp"
+            android:layout_gravity="center"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="60dp"
@@ -20,7 +26,7 @@
      android:text="Bienvenid@"
      android:textStyle="bold"
      android:textSize="40dp"
-     android:layout_marginTop="-43dp"
+     android:layout_marginTop="-40dp"
      android:fontFamily="cursive"
      android:textColor="#000000"/>
 
@@ -44,40 +50,43 @@
             android:layout_height="wrap_content"
             android:paddingTop="10dp">
 
-            <LinearLayout
-
-                android:layout_width="match_parent"
+            <TableLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="25dp">
+                android:id="@+id/formRegistroConductor"
+                android:shrinkColumns="@android:string/selectAll"
+                android:stretchColumns="@android:string/selectAll"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="-4dp"
+                >
+            <TableRow>
+                <com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:hint="Correo Electronico"
+                        android:layout_width="400dp"
+                        android:layout_height="60dp"
+                        android:textSize="20dp"
+                        android:id="@+id/correoElectronico"
+                        android:theme="@style/Widget.AppCompat.EditText"
+                        android:layout_marginTop="20dp"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+            </TableRow>
+                <TableRow>
+                    <com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:hint="Contraseña"
+                            android:layout_width="400dp"
+                            android:layout_height="60dp"
+                            android:textSize="20dp"
+                            android:id="@+id/passwordLogin"
+                            android:theme="@style/Widget.AppCompat.EditText"
+                            android:layout_marginTop="10dp"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+                </TableRow>
 
-
-                <EditText
-                    android:id="@+id/correoElectronico"
-                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
-                    android:layout_width="369dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Correo electronico"
-                    android:inputType="textEmailSubject" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:paddingTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="25dp">
-
-
-                <EditText
-                    android:id="@+id/passwordLogin"
-                    style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
-                    android:layout_width="369dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Contraseña"
-                    android:inputType="textPassword" />
-
-            </LinearLayout>
+            </TableLayout>
 
             <Button
                 android:textColor="@color/colorWhite"
@@ -85,6 +94,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorRed"
                 android:onClick="Logeo"
+                android:padding="8dp"
+                android:layout_marginTop="20dp"
                 android:paddingBottom="25dp"
                 android:text="Aceptar"
                 android:textStyle="bold"
