--- a/app/src/main/res/layout/activity_tipo_cuenta.xml
+++ b/app/src/main/res/layout/activity_tipo_cuenta.xml
@@ -18,7 +18,7 @@
         style="@style/TextAppearance.AppCompat.Headline"/>
 
     <LinearLayout
-        android:paddingTop="50dp"
+        android:paddingTop="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -26,25 +26,43 @@
 
         <Button
             android:id="@+id/tipoPasajero"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Pasajero"
+            android:padding="8dp"
+            android:background="@drawable/bg_round"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:drawableLeft="@drawable/iconopasajero"
             android:onClick="registroPasajero"
             />
 
         <Button
             android:id="@+id/tipoConductor"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:onClick="registroConductor"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:padding="8dp"
+            android:background="@drawable/bg_round"
+            android:layout_marginTop="5dp"
+            android:drawableLeft="@drawable/iconoconductor"
             android:text="Conductor"
             />
 
         <Button
            android:id="@+id/tipoPropietario"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:background="@drawable/bg_round"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
             android:onClick="registroPropietario"
+            android:drawableLeft="@drawable/iconopropietario"
             android:text="Propietario"/>
     </LinearLayout>
 
