--- a/app/src/main/res/layout/activity_login__form.xml
+++ b/app/src/main/res/layout/activity_login__form.xml
@@ -17,8 +17,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="-10dp"
-            android:src="@drawable/avisalogin"/>
+            android:layout_marginTop="-10dp"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="60dp"
