--- a/app/src/main/res/layout/activity_perfil_pasajero.xml
+++ b/app/src/main/res/layout/activity_perfil_pasajero.xml
@@ -32,6 +32,8 @@
                         android:background="@drawable/boton_redondo"
                         android:layout_marginTop="10dp"
                         android:src="@drawable/man2"
+                        android:id="@+id/fotoPasa"
+                        android:onClick="preview"
                         />
 
                 </LinearLayout>
