--- a/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -9,10 +9,6 @@
     android:padding="20dp"
     android:background="@color/colorWhite">
 
-
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,13 +28,14 @@
 
 
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:layout_width="141dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:layout_gravity="center"
                     android:background="@drawable/boton_redondo"
                     android:src="@drawable/man2"
                     android:id="@+id/picRegistroPasajero"
-                    android:onClick="preview"/>
+                    android:onClick="fotopasajero"
+                 />
 
 
 
@@ -48,6 +45,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="349dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/bordes_redondeados"
                 android:orientation="vertical">
 
@@ -150,7 +148,7 @@
                             android:outlineAmbientShadowColor="@color/gris"
                             android:shadowColor="@color/gris"
                             android:text="REGISTRARME"
-                            android:onClick="preview"
+                            android:onClick="RegistrarmePasajero"
 
                             android:textColor="@color/colorWhite" />
                     </TableRow>
