--- a/app/src/main/res/layout/cuadrodialogofotopasajero.xml
+++ b/app/src/main/res/layout/cuadrodialogofotopasajero.xml
@@ -1,106 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="190dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    tools:context=".OpcionesFotografiaPasajero"
-    android:gravity="center">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#85FFFFFF"
+    android:layout_gravity="center">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <LinearLayout
+            android:id="@+id/opcTomarFoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:clickable="true"
             android:gravity="center"
-            android:padding="10dp"
-            android:id="@+id/opcTomarFoto"
-            android:clickable="true">
+            android:orientation="vertical"
+            android:padding="10dp">
+
             <ImageButton
                 android:id="@+id/btnTomarFotoPasajero"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:background="@drawable/circlebackgroundred"
-                android:src="@drawable/ic_foto_24dp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:src="@drawable/ic_foto_24dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:layout_marginTop="10dp"
                 android:text="Tomar Foto"
-                android:textColor="#000"/>
+                android:textColor="#000"
+                android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorLightGrayLine"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:background="@color/colorLightGrayLine" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/opcGaleria"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:clickable="true"
             android:gravity="center"
-            android:padding="10dp"
-            android:id="@+id/opcGaleria"
-            android:clickable="true">
+            android:orientation="vertical"
+            android:padding="10dp">
+
             <ImageButton
                 android:id="@+id/btnTomardeGaleriaPasajero"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:background="@drawable/circlebackgroundred"
-                android:src="@drawable/ic_galeria_24dp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:src="@drawable/ic_galeria_24dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:layout_marginTop="10dp"
                 android:text="Galeria"
-                android:textColor="#000"/>
+                android:textColor="#000"
+                android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorLightGrayLine"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:background="@color/colorLightGrayLine" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/opcEliminar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:clickable="true"
             android:gravity="center"
-            android:padding="10dp"
-            android:id="@+id/opcEliminar"
-            android:clickable="true">
+            android:orientation="vertical"
+            android:padding="10dp">
+
             <ImageButton
                 android:id="@+id/btnEliminarFotoPasajero"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:background="@drawable/circlebackgroundred"
-                android:src="@drawable/ic_eliminar_24dp"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:src="@drawable/ic_eliminar_24dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:layout_marginTop="10dp"
                 android:text="Eliminar"
-                android:textColor="#000"/>
+                android:textColor="#000"
+                android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorLightGrayLine"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:background="@color/colorLightGrayLine" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
