--- a/app/src/main/res/layout/activity_registro_propietario.xml
+++ b/app/src/main/res/layout/activity_registro_propietario.xml
@@ -33,13 +33,13 @@
                     android:textColor="#000000"
                     />
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:layout_gravity="center"
                     android:background="@drawable/boton_redondo"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/man2"
-                    android:onClick="previewPropietario"
+                    android:onClick="Propietario"
                     android:id="@+id/imgpropietario"
                     />
                 <!--
